<resources>
    <string name="app_name">Charaka</string>
    <string name="login">Login</string>
    <string name="input_email">Email atau Username</string>
    <string name="password">Password</string>
    <string name="dont">Don\'t Have an Account?</string>
    <string name="sign_up_now">Sign Up Now</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="have_account">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="books">Books</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_explore">Explore</string>
    <string name="title_books">Books</string>
    <string name="best_books">Best Books</string>
    <string name="popular_books">Popular Books</string>
    <string name="books_recommendation">Books Recommendation</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="rating">Rating</string>
    <string name="name">Name</string>
    <string name="settings">Settings</string>
    <string name="invalid_login_message">Sorry your email and password do not match.</string>
    <string name="sign_up_success">Thank you, your registration is success!</string>
    <string name="sign_in_now">Login Now</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="tab_my_posts">My Posts</string>
    <string name="post_liked">Post Liked</string>
    <string name="post_saved">Post Saved</string>
    <string name="description">Description</string>
    <string name="done">Done</string>
    <string name="your_ratings">Your Ratings</string>
    <string name="ratings">Ratings</string>
    <string name="friends">Friends</string>
    <string name="empty">Empty</string>
    <string name="empty_post">You haven\'t Made any post yet</string>
    <string name="refresh">Refresh</string>
</resources>